# cv_2022

./: CMakeLists.txt  README.md
src/: basic_cv.cpp  face_detect.cpp  hello_cv.cpp  read_file.cpp
